--- a/src/styles.css
+++ b/src/styles.css
@@ -12,28 +12,80 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  background-color: rgb(150, 202, 231);
+  background-color: #afeeee;
 }
 
-.search {
-  background-color: white;
-  border-radius: 6px;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.search:focus {
-  outline: transparent;
-  border: 2px solid blue;
-  border-radius: 4px;
+.search-form {
+  display: flex;
+  justify-content: center;
+  padding: 8px;
+  margin-bottom: 24px;
 }
 
-.card-key {
-  font-weight: bold;
+.button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.card-value {
-  font-weight: normal;
+.button.is-hidden {
+  display: none;
 }
 
-.card-img-flag {
-  margin-top: 10px;
+.button > .spinner.is-hidden {
+  display: none;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  max-width: calc(100vw - 80px);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+
+.gallery li {
+  overflow: hidden;
+}
+
+.gallery img {
+  display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.gallery a {
+  text-decoration: none;
+  color: #2a2a2a;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 10px;
+  color: #4169e1;
+}
+
+.material-icons {
+  display: block;
+  font-size: 18px;
+}
+.stats-item {
+  text-align: center;
+}
+
+.stats-numbers {
+  font-size: 12px;
 }
